--- a/projectA/index.html
+++ b/projectA/index.html
@@ -2,29 +2,64 @@
 <html>
 
 <head>
-    <title>name of creature</title>
-    <link rel="stylesheet" href="css/style.css"
+    <title>[ Chromatium Ogeni ]</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 </head>
 
 <body>
-<h1>name of creature</h1>
-<img width="800px" src="canvas_placeholder_720.png" alt="xyz"
-<h3>Discovered by / at</h3>
-<p> blah blah blah </p>
-<h3>Family</h3>
-<p>x</p>
-<h3>Habitat</h3>
-<p></p>
-<h3>Appearance</h3>
-<p>abc</p>
-<h3>Key Characteristics</h3>
-<ul>
-    <li>aaa</li>
-    <li>bbb</li>
-    <li>ccc</li>
-</ul>
-<hr>
-<p>What do we know so far about Creature Name</p>
+    <div id="title-wrapper">
+        <h1 class="headline red">Chromatium Ogeni</h1>
+    </div>
+    <div id="main-wrapper">
+        <div id="p5-canvas-container">
+        </div>
+        <div class="two-columns">
+            <div class="left">
+                <h3 class="yellow">Scientific Name:</h3>
+                <p>[ Chromatium Ogeni ]</p >
+
+                <h3 class="yellow">Discovered by / at:</h3>
+                <ul>
+                    <li>Evelyn Chen</li>
+                    <li>In Shanghai, China</li>
+                    <li>In March 2024</li>
+                </ul>
+
+                 <h3 class="green">Family:</h3>
+            <p>Chromatiaceae is a family of photosynthetic bacteria known for their ability to perform anoxygenic photosynthesis, meaning they do not produce oxygen as a byproduct of their photosynthetic process. Instead, they utilize various sulfur compounds such as hydrogen sulfide (H2S) or elemental sulfur as electron donors in photosynthesis.  </p >
+            </div>
+            <div class="right">
+                <h3 class="green">Habitat:</h3>
+                <p>Members of the Chromatiaceae family are typically found in environments rich in organic matter, such as sediments of freshwater lakes, ponds, or sulfur-rich environments like hot springs and sulfide-rich muds. They often form characteristic sulfur granules within their cells, which aid in the storage of sulfur compounds for use in photosynthesis.</p >
+
+                <h3 class="green">Appearance:</h3>
+                <p>This text is part of the story telling of your project. You created this creature then you can give all the information about it.</p >
+                
+                <h3 class="green">Key Characteristics:</h3>
+                <ul>
+                    <li>Loves sunlight</li>
+                    <li>Changes color when poked</li>
+                    <li>(keep them short!)</li>
+                    <li>...</li>
+                </ul>
+            </div>
+        </div>
+        <div class="one-column">
+            <p>
+                <span class="red">What we know so far about Chromatium Ogeni?</span>
+                Chromatium Ogeni, commonly referred to as the Color-Changing Swift, is a captivating creature that has garnered significant interest among scientists and researchers. This remarkable organism possesses an extraordinary ability to randomly change its color when touched, which has fascinated observers and sparked curiosity about its underlying mechanisms.Found primarily in regions abundant in sunlight, Chromatium Ogeni showcases remarkable agility and swiftness in its movements. It thrives in environments where sunlight is abundant, utilizing the sun's rays as a source of energy to power its activities. This adaptation allows the creature to navigate its surroundings with remarkable speed and efficiency, making it a truly captivating sight. One of the most intriguing aspects of Chromatium Ogeni is its color-changing ability. When touched, the creature undergoes a mesmerizing transformation, altering its pigmentation. This unique defense mechanism hints at its heightened sensitivity to tactile stimuli. Scientists are still studying and attempting to unravel the complex biological processes that enable Chromatium Ogeni to change its color. It is believed that specialized cells within its epidermis are responsible for this remarkable phenomenon, responding to physical contact by triggering pigment redistribution. The exact mechanisms and genetic basis behind this fascinating adaptation remain subjects of ongoing research and exploration.
+                <br>
+            </div>
+                <span class="yellow">Guidelines for human interaction with the Chromatium Ogeni : </span> The Chromatium Ogeni has two main reactions. First, when exposed to light or sunlight (turn on the light by pressing the Space Key), the Ogeni moves faster than it would in darkness. Secondly, when poked (poke by pressing on a circle with the mouse), it will trigger the pigment redistribution and cause the Chromatium Ogeni to change color. 
+        </div>
+    </div>
+    <div id="home"><a href=" ">Back to the ATLAS</a ></div>
+    <div id="footer" class="yellow">
+        <p>A CCLab project made by Evelyn Chen in Spring 2024</p >
+    </div>
+    <script src="js/sketch.js"></script>
+
 </body>
 
 </html>
