--- a/projectA/index.html
+++ b/projectA/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>[ Chromatium Ogeni ]</title>
+    <title>Chromatium Ogeni</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 </head>
@@ -17,7 +17,7 @@
         <div class="two-columns">
             <div class="left">
                 <h3 class="yellow">Scientific Name:</h3>
-                <p>[ Chromatium Ogeni ]</p >
+                <p> Chromatium Ogeni </p >
 
                 <h3 class="yellow">Discovered by / at:</h3>
                 <ul>
@@ -40,8 +40,8 @@
                 <ul>
                     <li>Loves sunlight</li>
                     <li>Changes color when poked</li>
-                    <li>(keep them short!)</li>
-                    <li>...</li>
+                    <li>Moves faster when exposed to sunlight</li>
+                
                 </ul>
             </div>
         </div>
