--- a/projectA/index.html
+++ b/projectA/index.html
@@ -34,7 +34,7 @@
                 <p>Members of the Chromatiaceae family are typically found in environments rich in organic matter, such as sediments of freshwater lakes, ponds, or sulfur-rich environments like hot springs and sulfide-rich muds. They often form characteristic sulfur granules within their cells, which aid in the storage of sulfur compounds for use in photosynthesis.</p >
 
                 <h3 class="green">Appearance:</h3>
-                <p>This text is part of the story telling of your project. You created this creature then you can give all the information about it.</p >
+                <p>The appearance of the Chromatium Ogeni is similar to the Chromatium Okenii -- round in shape and colorful. Because of the Chromatium Ogeni's extreme sensitivy to touch, it is prone to pigment redistribution when touched. Additionally, the bacteria will speed up in movement when exposed to natual or artificial light. </p >
                 
                 <h3 class="green">Key Characteristics:</h3>
                 <ul>
