--- a/projectA/index.html
+++ b/projectA/index.html
@@ -10,14 +10,14 @@
 <body>
     <div id="title-wrapper">
         <h1 class="headline red">Chromatium Ogeni</h1>
-    </div>
-    <div id="main-wrapper">
         <div id="p5-canvas-container">
         </div>
+    </div>
+    <div id="main-wrapper">
         <div class="two-columns">
             <div class="left">
                 <h3 class="yellow">Scientific Name:</h3>
-                <p> Chromatium Ogeni </p >
+                <p> Chromatium Ogeni </p>
 
                 <h3 class="yellow">Discovered by / at:</h3>
                 <ul>
@@ -26,29 +26,27 @@
                     <li>In March 2024</li>
                 </ul>
 
-                 <h3 class="green">Family:</h3>
-            <p>Chromatiaceae is a family of photosynthetic bacteria known for their ability to perform anoxygenic photosynthesis, meaning they do not produce oxygen as a byproduct of their photosynthetic process. Instead, they utilize various sulfur compounds such as hydrogen sulfide (H2S) or elemental sulfur as electron donors in photosynthesis.  </p >
+                <h3 class="green">Family:</h3>
+                <p>Chromatiaceae is a family of photosynthetic bacteria known for their ability to perform anoxygenic photosynthesis, meaning they do not produce oxygen as a byproduct of their photosynthetic process. Instead, they utilize various sulfur compounds such as hydrogen sulfide (H2S) or elemental sulfur as electron donors in photosynthesis.</p>
             </div>
             <div class="right">
                 <h3 class="green">Habitat:</h3>
-                <p>Members of the Chromatiaceae family are typically found in environments rich in organic matter, such as sediments of freshwater lakes, ponds, or sulfur-rich environments like hot springs and sulfide-rich muds. They often form characteristic sulfur granules within their cells, which aid in the storage of sulfur compounds for use in photosynthesis.</p >
+                <p>Members of the Chromatiaceae family are typically found in environments rich in organic matter, such as sediments of freshwater lakes, ponds, or sulfur-rich environments like hot springs and sulfide-rich muds. They often form characteristic sulfur granules within their cells, which aid in the storage of sulfur compounds for use in photosynthesis.</p>
 
                 <h3 class="green">Appearance:</h3>
-                <p>The appearance of the Chromatium Ogeni is similar to the Chromatium Okenii -- round in shape and colorful. Because of the Chromatium Ogeni's extreme sensitivy to touch, it is prone to pigment redistribution when touched. Additionally, the bacteria will speed up in movement when exposed to natual or artificial light. </p >
-                
+                <p>The appearance of the Chromatium Ogeni is similar to the Chromatium Okenii -- round in shape and colorful. Because of the Chromatium Ogeni's extreme sensitivy to touch, it is prone to pigment redistribution when touched. Additionally, the bacteria will speed up in movement when exposed to natual or artificial light.</p>
+
                 <h3 class="green">Key Characteristics:</h3>
                 <ul>
                     <li>Loves sunlight</li>
                     <li>Changes color when poked</li>
                     <li>Moves faster when exposed to sunlight</li>
-                
                 </ul>
             </div>
         </div>
         <div class="one-column">
             <p>
-                <span class="red">What we know so far about Chromatium Ogeni?</span>
-                Chromatium Ogeni, commonly referred to as the Color-Changing Swift, is a captivating creature that has garnered significant interest among scientists and researchers. This remarkable organism possesses an extraordinary ability to randomly change its color when touched, which has fascinated observers and sparked curiosity about its underlying mechanisms.Found primarily in regions abundant in sunlight, Chromatium Ogeni showcases remarkable agility and swiftness in its movements. It thrives in environments where sunlight is abundant, utilizing the sun's rays as a source of energy to power its activities. This adaptation allows the creature to navigate its surroundings with remarkable speed and efficiency, making it a truly captivating sight. One of the most intriguing aspects of Chromatium Ogeni is its color-changing ability. When touched, the creature undergoes a mesmerizing transformation, altering its pigmentation. This unique defense mechanism hints at its heightened sensitivity to tactile stimuli. Scientists are still studying and attempting to unravel the complex biological processes that enable Chromatium Ogeni to change its color. It is believed that specialized cells within its epidermis are responsible for this remarkable phenomenon, responding to physical contact by triggering pigment redistribution. The exact mechanisms and genetic basis behind this fascinating adaptation remain subjects of ongoing research and exploration.
+                <span class="red">What we know so far about Chromatium Ogeni?</span> Chromatium Ogeni, commonly referred to as the Color-Changing Swift, is a captivating creature that has garnered significant interest among scientists and researchers. This remarkable organism possesses an extraordinary ability to randomly change its color when touched, which has fascinated observers and sparked curiosity about its underlying mechanisms.Found primarily in regions abundant in sunlight, Chromatium Ogeni showcases remarkable agility and swiftness in its movements. It thrives in environments where
                 <br>
             </div>
                 <span class="yellow">Guidelines for human interaction with the Chromatium Ogeni : </span> The Chromatium Ogeni has two main reactions. First, when exposed to light or sunlight (turn on the light by pressing the Space Key), the Ogeni moves faster than it would in darkness. Secondly, when poked (poke by pressing on a circle with the mouse), it will trigger the pigment redistribution and cause the Chromatium Ogeni to change color. 
@@ -62,4 +60,4 @@
 
 </body>
 
-</html>
+</html>"
