--- a/project B/blog.html
+++ b/project B/blog.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Our Tips & Tricks</title>
-    <link rel="stylesheet" type="text/css" href="./css/blog.style.css">
+    <link rel="stylesheet" type="text/css" href="./css/blog_style.css">
 </head>
 
 <body>
@@ -56,6 +56,7 @@
         </div>
 
         <div id="back-link"><a href="index.html">Back to Home</a></div>
+        <script src="js/sketch2.js"></script>
     </div>
 </body>
 
